try again to fix the gesture on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -69,6 +69,3 @@ mat-tab-body{
     font-size:18px;
   }
 }
-.leaflet-popup-content{
-  overflow: hidden !important;
-}
